--- a/day03/wpf04_mvvm_app/ex07_EmployeeMngApp/Views/MainView.xaml
+++ b/day03/wpf04_mvvm_app/ex07_EmployeeMngApp/Views/MainView.xaml
@@ -21,13 +21,14 @@
                    Content="직원 리스트" FontSize="20"
                    VerticalAlignment="Center"/>
             <DataGrid x:Name="ListEmployees" Grid.Row="1" Grid.Column="0"
+                      AutoGenerateColumns="False" IsReadOnly="True"
                       SelectedItem="{Binding SelectedEmployee}">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="아이디" Binding="{Binding Id}" />
-                    <DataGridTextColumn Header="사원명" Binding="{Binding EmpName}" />
-                    <DataGridTextColumn Header="급여" Binding="{Binding Salary}" />
-                    <DataGridTextColumn Header="부서명" Binding="{Binding Deptname}" />
-                    <DataGridTextColumn Header="주소" Binding="{Binding Addr}" />
+                    <DataGridTextColumn Header="아이디" Binding="{Binding Id}" Width="45" />
+                    <DataGridTextColumn Header="사원명" Binding="{Binding EmpName}" Width="75" />
+                    <DataGridTextColumn Header="급여" Binding="{Binding Salary}" Width="60"/>
+                    <DataGridTextColumn Header="부서명" Binding="{Binding DeptName}" Width="80"/>
+                    <DataGridTextColumn Header="주소" Binding="{Binding Addr}" Width="100"/>
                 </DataGrid.Columns>
             </DataGrid>
             <Button x:Name="GetEmployees" Grid.Row="2" Grid.Column="0" 
@@ -66,7 +67,8 @@
                        VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10,0"/>
 
                 <TextBox x:Name="Id" Grid.Row="0" Grid.Column="1"
-                         VerticalAlignment="Center"/>
+                         VerticalAlignment="Center"
+                         IsReadOnly="True"/>
                 <TextBox x:Name="EmpName" Grid.Row="1" Grid.Column="1"
                          VerticalAlignment="Center"
                          />
